[style] add some colors

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="header_color">#333333</color>
+    <color name="description_color">#666666</color>
+    <color name="default_color">#2BA169</color>
 </resources>
