--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,4 +34,11 @@ Angkor Wat Temple
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">#666666</item>
     </style>
+
+
+    <!-- styles.xml -->
+    <style name="embark_on_y">
+        <item name="android:textSize">35sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
 </resources>
