Add style, color, font

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="header_color">#333333</color>
     <color name="description_color">#666666</color>
     <color name="default_color">#2BA169</color>
+    <color name="skeleton_color">#E2E3EA</color>
 </resources>
