--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -95,7 +95,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="transparent"
+            android:background="@android:color/transparent"
             android:text="Don't have an account yet ? \nRegister Now"
             android:textColor="@color/black"/>
     </LinearLayout>
