--- a/app/src/main/res/layout/activity_destination.xml
+++ b/app/src/main/res/layout/activity_destination.xml
@@ -26,71 +26,42 @@
 
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/img_banner"
             android:layout_width="336dp"
             android:layout_height="168dp"
             android:scaleType="centerCrop"
-            app:srcCompat="@drawable/angkorwat"
+            app:srcCompat="@drawable/img_angkorwat"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteX="38dp"
-            tools:layout_editor_absoluteY="77dp" />
-
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="157dp"
-            android:layout_height="157dp"
-            android:scaleType="centerCrop"
-            app:srcCompat="@drawable/koh_norea"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="285dp" />
+            tools:layout_editor_absoluteY="77dp"
+            android:importantForAccessibility="no" />
 
         <View
-            android:id="@+id/rectangle_1"
+            android:id="@+id/gredient_banner"
             android:layout_width="334dp"
             android:layout_height="168dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:background="@drawable/gradient_carousel"
+            android:background="@drawable/gradient_banner"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteX="38dp"
             tools:layout_editor_absoluteY="77dp" />
 
         <TextView
-            android:id="@+id/visit_angko"
+            android:id="@+id/txt_banner"
             android:layout_width="129.78dp"
             android:layout_height="20dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:gravity="top"
             android:text="@string/visit_angko"
-            android:textAppearance="@style/visit_angko"
+            android:textAppearance="@style/primary_txt"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteX="67dp"
             tools:layout_editor_absoluteY="118dp" />
 
         <View
-            android:id="@+id/ellipse_211"
-            android:layout_width="8dp"
-            android:layout_height="8dp"
-            android:alpha="0.15"
-            android:background="#1BA169"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="181dp"
-            tools:layout_editor_absoluteY="256dp" />
-
-        <View
-            android:id="@+id/ellipse_3"
-            android:layout_width="8dp"
-            android:layout_height="8dp"
-            android:alpha="0.15"
-            android:background="#1BA169"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="227dp"
-            tools:layout_editor_absoluteY="256dp" />
-
-        <View
-            android:id="@+id/ellipse_"
+            android:id="@+id/indicator1"
             android:layout_width="8dp"
             android:layout_height="8dp"
             android:alpha="0.15"
@@ -100,7 +71,17 @@
             tools:layout_editor_absoluteY="256dp" />
 
         <View
-            android:id="@+id/ellipse_213"
+            android:id="@+id/indicator2"
+            android:layout_width="8dp"
+            android:layout_height="8dp"
+            android:alpha="0.15"
+            android:background="#1BA169"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="181dp"
+            tools:layout_editor_absoluteY="256dp" />
+
+        <View
+            android:id="@+id/indicator3"
             android:layout_width="8dp"
             android:layout_height="8dp"
             android:background="#1BA169"
@@ -109,7 +90,7 @@
             tools:layout_editor_absoluteY="256dp" />
 
         <View
-            android:id="@+id/ellipse_2"
+            android:id="@+id/indicator4"
             android:layout_width="8dp"
             android:layout_height="8dp"
             android:alpha="0.15"
@@ -119,50 +100,82 @@
             tools:layout_editor_absoluteY="256dp" />
 
         <View
-            android:id="@+id/bg"
+            android:id="@+id/indicator5"
+            android:layout_width="8dp"
+            android:layout_height="8dp"
+            android:alpha="0.15"
+            android:background="#1BA169"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="227dp"
+            tools:layout_editor_absoluteY="256dp" />
+
+        <View
+            android:id="@+id/gredient_desination"
             android:layout_width="158dp"
             android:layout_height="158dp"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:background="@drawable/bg_product"
             tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteX="38dp"
             tools:layout_editor_absoluteY="285dp" />
 
-        <TextView
-            android:id="@+id/koh_norea_i"
-            android:layout_width="142dp"
-            android:layout_height="20dp"
-            android:layout_alignParentTop="true"
-            android:gravity="top"
-            android:text="@string/koh_norea_i"
-            android:textAppearance="@style/koh_norea_i"
+        <ImageView
+            android:id="@+id/img_destination"
+            android:layout_width="157dp"
+            android:layout_height="157dp"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/img_kohnorea"
             tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="26dp"
-            tools:layout_editor_absoluteY="384dp" />
-
-        <TextView
-            android:id="@+id/km_away"
-            android:layout_width="79.65dp"
-            android:layout_height="15dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:gravity="top"
-            android:text="@string/km_away"
-            android:textAppearance="@style/km_away"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="45dp"
-            tools:layout_editor_absoluteY="412dp" />
+            tools:layout_editor_absoluteX="38dp"
+            tools:layout_editor_absoluteY="285dp"
+            android:importantForAccessibility="no" />
 
         <ImageView
-            android:id="@+id/imageView6"
+            android:id="@+id/img_location"
             android:layout_width="14dp"
             android:layout_height="16dp"
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/ic_location"
             tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="24dp"
+            tools:layout_editor_absoluteX="46dp"
+            tools:layout_editor_absoluteY="412dp"
+            android:importantForAccessibility="no" />
+
+        <TextView
+            android:id="@+id/txt_destination"
+            android:layout_width="142dp"
+            android:layout_height="20dp"
+            android:layout_alignParentTop="true"
+            android:gravity="top"
+            android:text="@string/txt_destination"
+            android:textAppearance="@style/secondary_txt"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="48dp"
+            tools:layout_editor_absoluteY="384dp" />
+
+        <TextView
+            android:id="@+id/txt_distance"
+            android:layout_width="79.65dp"
+            android:layout_height="15dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:gravity="top"
+            android:text="@string/txt_distance"
+            android:textAppearance="@style/distance_style"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="67dp"
             tools:layout_editor_absoluteY="412dp" />
+
+        <ImageView
+            android:id="@+id/bt_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_back"
+            tools:layout_editor_absoluteX="38dp"
+            tools:layout_editor_absoluteY="16dp"
+            tools:ignore="MissingConstraints"
+            android:importantForAccessibility="no" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
