--- a/app/src/main/res/layout/activity_destination_detail.xml
+++ b/app/src/main/res/layout/activity_destination_detail.xml
@@ -26,18 +26,18 @@
 
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/img_banner"
             android:layout_width="336dp"
             android:layout_height="168dp"
             android:scaleType="centerCrop"
-            app:srcCompat="@drawable/angkorwat"
+            app:srcCompat="@drawable/img_angkorwat"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteX="38dp"
             tools:layout_editor_absoluteY="77dp" />
 
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/img_gallery"
             android:layout_width="105dp"
             android:layout_height="64dp"
             android:scaleType="centerCrop"
@@ -47,31 +47,31 @@
             tools:layout_editor_absoluteY="549dp" />
 
         <View
-            android:id="@+id/rectangle_1"
+            android:id="@+id/gredient_banner"
             android:layout_width="334dp"
             android:layout_height="168dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:background="@drawable/gradient_carousel"
+            android:background="@drawable/gradient_banner"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteX="38dp"
             tools:layout_editor_absoluteY="77dp" />
 
         <TextView
-            android:id="@+id/visit_angko"
+            android:id="@+id/txt_banner"
             android:layout_width="129.78dp"
             android:layout_height="20dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:gravity="top"
             android:text="@string/visit_angko"
-            android:textAppearance="@style/visit_angko"
+            android:textAppearance="@style/primary_txt"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteX="67dp"
             tools:layout_editor_absoluteY="118dp" />
 
         <View
-            android:id="@+id/ellipse_211"
+            android:id="@+id/indicator2"
             android:layout_width="8dp"
             android:layout_height="8dp"
             android:alpha="0.15"
@@ -81,7 +81,7 @@
             tools:layout_editor_absoluteY="256dp" />
 
         <View
-            android:id="@+id/ellipse_3"
+            android:id="@+id/indicator5"
             android:layout_width="8dp"
             android:layout_height="8dp"
             android:alpha="0.15"
@@ -91,7 +91,7 @@
             tools:layout_editor_absoluteY="256dp" />
 
         <View
-            android:id="@+id/ellipse_"
+            android:id="@+id/indicator1"
             android:layout_width="8dp"
             android:layout_height="8dp"
             android:alpha="0.15"
@@ -101,7 +101,7 @@
             tools:layout_editor_absoluteY="256dp" />
 
         <View
-            android:id="@+id/ellipse_213"
+            android:id="@+id/indicator3"
             android:layout_width="8dp"
             android:layout_height="8dp"
             android:background="#1BA169"
@@ -110,7 +110,7 @@
             tools:layout_editor_absoluteY="256dp" />
 
         <View
-            android:id="@+id/ellipse_2"
+            android:id="@+id/indicator4"
             android:layout_width="8dp"
             android:layout_height="8dp"
             android:alpha="0.15"
@@ -120,50 +120,50 @@
             tools:layout_editor_absoluteY="256dp" />
 
         <TextView
-            android:id="@+id/angkor_wat_"
+            android:id="@+id/txt_title"
             android:layout_width="151dp"
             android:layout_height="20dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:gravity="top"
             android:text="@string/angkor_wat_"
-            android:textAppearance="@style/angkor_wat_"
+            android:textAppearance="@style/primary_style"
             tools:layout_editor_absoluteX="53dp"
             tools:layout_editor_absoluteY="275dp" />
 
         <TextView
-            android:id="@+id/angkor_wat_2"
+            android:id="@+id/txt_about"
             android:layout_width="151dp"
             android:layout_height="20dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:gravity="top"
             android:text="About"
-            android:textAppearance="@style/angkor_wat_"
+            android:textAppearance="@style/primary_style"
             tools:layout_editor_absoluteX="52dp"
             tools:layout_editor_absoluteY="337dp" />
 
         <TextView
-            android:id="@+id/angkor_wat_3"
+            android:id="@+id/txt_gallery"
             android:layout_width="151dp"
             android:layout_height="20dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:gravity="top"
             android:text="Gallery"
-            android:textAppearance="@style/angkor_wat_"
+            android:textAppearance="@style/primary_style"
             tools:layout_editor_absoluteX="52dp"
             tools:layout_editor_absoluteY="517dp" />
 
         <TextView
-            android:id="@+id/siem_reap_c"
+            android:id="@+id/txt_location"
             android:layout_width="128dp"
             android:layout_height="15dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:gravity="top"
             android:text="@string/siem_reap_c"
-            android:textAppearance="@style/siem_reap_c"
+            android:textAppearance="@style/txt_location"
             tools:layout_editor_absoluteX="68dp"
             tools:layout_editor_absoluteY="306dp" />
 
@@ -176,7 +176,7 @@
             tools:layout_editor_absoluteY="306dp" />
 
         <TextView
-            android:id="@+id/the_archite"
+            android:id="@+id/txt_description"
             android:layout_width="315dp"
             android:layout_height="108dp"
             android:layout_alignParentLeft="true"
@@ -184,13 +184,13 @@
             android:gravity="top"
             android:lineSpacingExtra="3sp"
             android:text="@string/the_archite"
-            android:textAppearance="@style/the_archite"
+            android:textAppearance="@style/secondary_style"
             android:translationY="-1.44sp"
             tools:layout_editor_absoluteX="53dp"
             tools:layout_editor_absoluteY="375dp" />
 
         <View
-            android:id="@+id/some_id"
+            android:id="@+id/gradient_gallery"
             android:layout_width="105dp"
             android:layout_height="62dp"
             android:layout_alignParentLeft="true"
@@ -198,6 +198,14 @@
             android:background="@drawable/some_id"
             tools:layout_editor_absoluteX="52dp"
             tools:layout_editor_absoluteY="549dp" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_back"
+            tools:layout_editor_absoluteX="38dp"
+            tools:layout_editor_absoluteY="16dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
