--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,23 +10,23 @@
         <item name="layout_constraintTop_toTopOf">parent</item>
     </style>
 
-    <style name="visit_angko">
+    <style name="primary_txt">
         <item name="android:textSize">13sp</item>
         <item name="android:letterSpacing">0.02</item>
         <item name="android:textColor">#FFFFFF</item>
     </style>
 
-    <style name="koh_norea_i">
+    <style name="secondary_txt">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">#FFFFFF</item>
     </style>
 
-    <style name="km_away">
+    <style name="distance_style">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">#FFFFFF</item>
     </style>
 
-    <style name="angkor_wat_">
+    <style name="primary_style">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">#333333</item>
     </style>
@@ -35,11 +35,11 @@
 Angkor Wat Temple
 </string>
 
-    <style name="siem_reap_c">
+    <style name="txt_location">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">#666666</item>
     </style>
-    <style name="the_archite">
+    <style name="secondary_style">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">#666666</item>
     </style>
