--- a/app/src/main/res/layout/list_item_categories.xml
+++ b/app/src/main/res/layout/list_item_categories.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginTop="20dp"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
     android:layout_margin="12dp">
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,16 +41,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_categories"
+                    android:src="@drawable/categories"
                     android:layout_marginRight="12dp"/>
                 <com.google.android.material.imageview.ShapeableImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_categories"
+                    android:src="@drawable/categories"
                     android:layout_marginRight="12dp"/>
                 <com.google.android.material.imageview.ShapeableImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_categories"
+                    android:src="@drawable/categories"
                     android:layout_marginRight="12dp"/>
 
             </LinearLayout>
@@ -56,4 +61,6 @@
         </HorizontalScrollView>
 
     </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
