--- a/app/src/main/res/layout/list_item_near_you.xml
+++ b/app/src/main/res/layout/list_item_near_you.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="20dp"
-    android:layout_margin="12dp">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_margin="12dp"
+    android:layout_marginTop="20dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,7 +17,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/categories"/>
+                android:text="@string/near_you"/>
             <View
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
@@ -38,17 +39,20 @@
                 <com.google.android.material.imageview.ShapeableImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/bg_categories"
+                    android:background="@drawable/bg_near_you"
+                    android:src="@drawable/near_you"
                     android:layout_marginRight="12dp"/>
                 <com.google.android.material.imageview.ShapeableImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/bg_categories"
+                    android:background="@drawable/bg_near_you"
+                    android:src="@drawable/near_you"
                     android:layout_marginRight="12dp"/>
                 <com.google.android.material.imageview.ShapeableImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/bg_categories"
+                    android:background="@drawable/bg_near_you"
+                    android:src="@drawable/near_you"
                     android:layout_marginRight="12dp"/>
 
             </LinearLayout>
@@ -56,4 +60,5 @@
         </HorizontalScrollView>
 
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
