--- a/app/src/main/res/drawable/item_popular_destination.xml
+++ b/app/src/main/res/drawable/item_popular_destination.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <size android:width="140dp" android:height="180dp" tools:ignore="StateListReachable" />
+    <size android:width="140dp" android:height="180dp"/>
     <solid android:color="@color/skeleton_color"/>
     <corners android:radius="10.667dp"/>
 </shape>
