--- a/app/src/main/res/values-night/splash_theme.xml
+++ b/app/src/main/res/values-night/splash_theme.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <style name="SplashTheme" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher</item>
+        <item name="windowSplashScreenBackground">@drawable/splash_screen</item>
         <item name="postSplashScreenTheme">@style/AppTheme</item>
     </style>
 
